gccida/g3/ix86_split_to_parts
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_split_to_parts/src/i386.c:9042:52: error: must use 'enum' tag to refer to type 'machine_mode'
int  ix86_split_to_parts( rtx operand, rtx *parts, machine_mode mode) 
                                                   ^
                                                   enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_split_to_parts/src/i386.c:9055:4: error: expected ';' after expression
rtx v16; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_split_to_parts/src/i386.c:9055:5: error: use of undeclared identifier 'v16'
rtx v16; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_split_to_parts/src/i386.c:9056:4: error: expected ';' after expression
rtx pool_constant; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_split_to_parts/src/i386.c:9056:5: error: use of undeclared identifier 'pool_constant'; did you mean 'get_pool_constant'?
rtx pool_constant; // rax 
    ^~~~~~~~~~~~~
    get_pool_constant
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_split_to_parts/src/rtl.h:1305:12: note: 'get_pool_constant' declared here
extern rtx get_pool_constant            PARAMS ((rtx));
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_split_to_parts/src/i386.c:9066:4: error: expected ';' after expression
rtx op; // [rsp+8h] [rbp-70h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_split_to_parts/src/i386.c:9066:5: error: use of undeclared identifier 'op'
rtx op; // [rsp+8h] [rbp-70h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_split_to_parts/src/i386.c:9068:1: error: must use 'union' tag to refer to type 'real_extract'
real_extract u; // [rsp+30h] [rbp-48h] BYREF 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_split_to_parts/src/i386.c:9072:12: error: expected identifier or '('
 struct op = operand; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_split_to_parts/src/i386.c:9090:13: error: expected expression
v8 = ( rtx *)( unsigned int)( v7 - 2); 
            ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_split_to_parts/src/i386.c:9090:16: error: expected expression
v8 = ( rtx *)( unsigned int)( v7 - 2); 
               ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_split_to_parts/src/i386.c:9114:28: error: expected ')'
|| (  struct pool_constant = get_pool_constant( rtx), 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_split_to_parts/src/i386.c:9114:4: note: to match this '('
|| (  struct pool_constant = get_pool_constant( rtx), 
   ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_split_to_parts/src/i386.c:9118:6: error: expected expression
v18) ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_split_to_parts/src/i386.c:9122:21: error: use of undeclared identifier 'op'
if ( !push_operand( op, VOIDmode) ) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_split_to_parts/src/i386.c:9124:17: error: use of undeclared identifier 'op'
v16 = copy_rtx( op); 
                ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_split_to_parts/src/i386.c:9124:1: error: use of undeclared identifier 'v16'
v16 = copy_rtx( op); 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_split_to_parts/src/i386.c:9125:14: error: use of undeclared identifier 'v16'
*( ( _BYTE *)v16 + 2) = ( ( BYTE3( target_flags) & 2) != 0) + 4; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_split_to_parts/src/i386.c:9126:12: error: use of undeclared identifier 'v16'
parts[2] = v16; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_split_to_parts/src/i386.c:9127:71: error: use of undeclared identifier 'v16'
*( __m128i *)parts = _mm_unpacklo_epi64( ( __m128i)( unsigned __int64)v16, ( __m128i)( unsigned __int64)v16); 
                                                                      ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_split_to_parts/src/obj/i386.o] Error 1
